分析程序修改